// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConversationList component should render with custom props 1`] = `
<ConversationList
  clickItem={null}
  cmpRef={null}
  conversations={
    Array [
      Object {
        "client": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "name": "Georgia Harmon",
        },
        "id": 1,
        "last_message": Object {
          "content": "Lorem ipusum la la ejemplo largo",
          "created_at": "2017-11-20T09:43:57.000-0300",
          "type": "normal",
        },
        "tags": Array [
          Object {
            "name": "SPU-CLAVE",
          },
        ],
      },
    ]
  }
  emptyStateText="No hay mas conversaciones"
  noMoreDataText=""
/>
`;

exports[`ConversationList component should render with empty props 1`] = `
<ConversationList
  clickItem={null}
  cmpRef={[Function]}
  conversations={Array []}
  emptyStateText=""
  noMoreDataText=""
/>
`;

exports[`ConversationList component should render with no conversation the empty state 1`] = `
<ConversationList
  clickItem={null}
  cmpRef={null}
  conversations={Array []}
  emptyStateText="No hay mas conversaciones"
  noMoreDataText=""
/>
`;
